@@ -1,3 +1,15 @@
+2010-03-10  Justin Schuh  <jschuh@chromium.org>
+
+        Reviewed by Adam Barth.
+
+        Make Chrome consistently handle leading format characters in URLs
+
+        https://bugs.webkit.org/show_bug.cgi?id=35948
+
+        Test: http/tests/security/xss-DENIED-window-open-javascript-url-leading-format-char.html
+
+        * platform/KURLGoogle.cpp:
+
 2010-03-10  Jian Li  <jianli@chromium.org>
 
         Reviewed by Dmitry Titov.
